Left Container Basically Done

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: var(--background-color-2);
   color: white;
+  display: flex;
+  padding: 3vw 5vw;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.boxContainer {
+  /* background-color: black; */
+  flex: 1;
+  margin: 0 2vw 0;
+  height: 80vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button {
+  display: inline-block;
+  padding: 15px 35px;
+  color: var(--color-primary);
+  font-size: var(--font-size-b1);
+  border-radius: 6px;
+  background: linear-gradient(145deg, #1e2024, #23272b);
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  position: relative;
+  z-index: 2;
+  font-weight: 600;
+  border: 0 none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: linear-gradient(145deg, #121416, #1c1f22);
+}
+
+.button:active {
+  background: linear-gradient(145deg, #121416, #1c1f22);
+  box-shadow: 0 5px #464646;
+  transform: translateY(4px);
+}
+
+@media only screen and (max-width: 900px) {
+  .App {
+    flex-direction: column;
+
   }
-  to {
-    transform: rotate(360deg);
+
+  .boxContainer {
+    margin: 2vw;
+    width: 90vw;
   }
 }
