--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,50 @@
+/* App.css */
+
 .App {
-  text-align: center;
   background-color: var(--background-color-2);
   color: white;
   display: flex;
-  padding: 3vw 5vw;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
+  padding: 0 3vw;
 }
 
-.boxContainer {
-  /* background-color: black; */
+.leftContainer {
   flex: 1;
-  margin: 0 2vw 0;
-  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
 }
+
+.rightContainer {
+  flex: 1.25;
+  overflow-y: auto;
+  padding: 20px;
+  /* Hide the scrollbar and make it transparent */
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  padding-top: 40px;
+}
+
+/* Styling for Webkit (Chrome and Safari) browsers */
+.rightContainer::-webkit-scrollbar {
+  width: 6px;
+  /* Adjust the width as needed */
+}
+
+.rightContainer::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  /* Make the thumb (the draggable part) transparent */
+}
+
+.rightContainer::-webkit-scrollbar-track {
+  background-color: transparent;
+  /* Make the track (the background) transparent */
+}
+
+
 
 .button {
   display: inline-block;
@@ -29,6 +60,7 @@
   font-weight: 600;
   border: 0 none;
   cursor: pointer;
+  margin: 25px;
 }
 
 .button:hover {
@@ -41,14 +73,46 @@
   transform: translateY(4px);
 }
 
+#boxContainer {
+  box-shadow: var(--shadow-1);
+  border-radius: 6px;
+  margin-bottom: 40px;
+  height: 15vh;
+  padding: 17px 30px;
+}
+
+.boxHeading {
+  position: relative;
+  margin-bottom: 35px;
+  font-size: 30px;
+  text-align: left;
+  font-weight: var(--s-bold);
+  text-shadow: var(--shadow-1);
+}
+
+.boxHeading::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #141618;
+  bottom: -2px;
+  left: 0;
+}
+
 @media only screen and (max-width: 900px) {
   .App {
     flex-direction: column;
-
+    height: 100%;
   }
 
   .boxContainer {
     margin: 2vw;
     width: 90vw;
+  }
+
+  .leftContainer,
+  .rightContainer {
+    overflow-y: inherit;
   }
 }
