--- a/src/Components/SmallComponents/ImageCarousel/ImageCarousel.css
+++ b/src/Components/SmallComponents/ImageCarousel/ImageCarousel.css
@@ -13,5 +13,18 @@ iframe {
 }
 
 .carouselItem {
-    margin: 5px;
+    max-height: 320px;
+    /* Set your desired maximum height */
+    max-width: 100%;
+    /* Set your desired maximum width */
+    overflow: hidden;
+}
+
+.projectImage {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    /* Ensure the entire image fits within the container without cropping */
+    display: block;
+    background-color: rgba(124, 124, 124, 0.062);
 }
