Changed Foodii Images

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -4,3 +4,11 @@
     object-fit: cover;
     border-radius: 10px;
 }
+
+.custom-list {
+    list-style-type: square;
+    /* Use disc as the list item marker */
+    padding-left: 20px;
+    /* Adjust the left padding as needed */
+    font-size: 15px;
+}
