--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   color: white;
   display: flex;
   height: 100vh;
-  padding: 0 3vw;
+  padding: 0 2vw;
 }
 
 .leftContainer {
@@ -49,7 +49,7 @@
 .button {
   display: inline-block;
   padding: 15px 35px;
-  color: var(--color-primary);
+  color: #20a7d8;
   font-size: var(--font-size-b1);
   border-radius: 6px;
   background: linear-gradient(145deg, #1e2024, #23272b);
