--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,7 @@ a:hover {
 .ExperienceTitle {
   /* text-decoration: none; */
   color: var(--color-info);
+  text-align: left;
 
 }
 
@@ -136,11 +137,12 @@ a:hover {
   background-color: #464646;
   height: 20px;
   line-height: 20px;
-  padding: 1px 8px;
-  font-size: 12px;
+  padding: 3px 10px;
+  font-size: 14px;
   font-weight: 400;
   border-radius: 15px;
   box-shadow: var(--shadow-black);
+  align-self: center;
 
 }
 
