--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -59,3 +59,7 @@
     cursor: pointer;
     font-size: clamp(2.5rem, 5vw, 3rem);
 }
+
+.splide__arrows button svg {
+    filter: drop-shadow(1px 1px 5px rgba(255, 255, 255, 0.2));
+}
