Experience/Project Heading Changes

--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,6 @@
   font-size: 18px;
   font-weight: 600;
   width: 100%;
-  margin-bottom: 8px;
   color: var(--color-info);
   flex-wrap: wrap;
   gap: 15px;
@@ -124,11 +123,11 @@ a:hover {
   opacity: 0.8;
 }
 
-.ExperienceTitle {
+.ExperienceTitle,
+.ExperienceTitle a {
   /* text-decoration: none; */
   color: var(--color-info);
   text-align: left;
-
 }
 
 .ExperienceTime {
@@ -147,19 +146,9 @@ a:hover {
 }
 
 .ExperienceBody {
-
-  margin-bottom: 15px;
+  margin-bottom: 1.3rem;
 }
 
-.ExperienceBody::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 1px;
-  background: #141618;
-  bottom: -2px;
-  left: 0;
-}
 
 @media only screen and (max-width: 1000px) {
   .App {
