--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
   --color-danger: #FF0003;
   --color-warning: #FF8F3C;
   --color-info: #1BA2DB;
+  --color-info-lighter: #b1d7e7;
   --color-facebook: #3B5997;
   --color-twitter: #1BA1F2;
   --color-youtube: #ED4141;
