--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -7,9 +7,15 @@
 }
 
 .custom-list {
+    margin-top: 1.5em;
     list-style-type: square;
     /* Use disc as the list item marker */
     padding-left: 20px;
     /* Adjust the left padding as needed */
     font-size: clamp(12px, 2vw, 15px)
+}
+
+.ExperienceTitle span {
+    color: var(--color-info-lighter);
+    font-size: 15px;
 }
