--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,11 @@
 
 
 
-.button {
+.AppButton {
   display: inline-block;
-  padding: 15px 35px;
+  padding: 0.9rem 1.4rem;
   color: #20a7d8;
-  font-size: var(--font-size-b1);
+  font-size: clamp(12px, 2vw, 16px);
   border-radius: 6px;
   background: linear-gradient(145deg, #1e2024, #23272b);
   box-shadow: var(--shadow-1);
@@ -63,11 +63,11 @@
   margin: 25px;
 }
 
-.button:hover {
+.AppButton:hover {
   background: linear-gradient(145deg, #121416, #1c1f22);
 }
 
-.button:active {
+.AppButton:active {
   background: linear-gradient(145deg, #121416, #1c1f22);
   box-shadow: 0 5px #464646;
   transform: translateY(4px);
@@ -84,7 +84,7 @@
 
 .boxHeading {
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: 1.6rem;
   font-size: 30px;
   text-align: left;
   font-weight: var(--s-bold);
@@ -111,7 +111,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 18px;
+  font-size: clamp(14px, 2vw, 18px);
   font-weight: 600;
   width: 100%;
   color: var(--color-info);
@@ -137,7 +137,7 @@ a:hover {
   height: 20px;
   line-height: 20px;
   padding: 3px 10px;
-  font-size: 14px;
+  font-size: clamp(11px, 2vw, 14px);
   font-weight: 400;
   border-radius: 15px;
   box-shadow: var(--shadow-black);
@@ -156,14 +156,20 @@ a:hover {
     height: 100%;
   }
 
-  .boxContainer {
-    margin: 2vw;
-    width: 90vw;
-  }
-
   .leftContainer,
   .rightContainer {
     overflow-y: inherit;
+    padding-top: 0.3rem;
+    padding: 0;
+  }
+
+
+  #boxContainer {
+    box-shadow: var(--shadow-soft);
+    border-radius: 6px;
+    /* height: 15vh; */
+    padding: 1.4rem 1.7rem;
+
   }
 }
 
