--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -25,6 +25,18 @@
     position: relative;
 }
 
+@media only screen and (max-width: 1000px) {
+    .skillsBox {
+        width: 35px;
+        height: 35px;
+    }
+
+    .skillsBoxSmall {
+        width: 25px;
+        height: 25px;
+    }
+}
+
 .skillsContainer {
     display: flex;
     flex-direction: row;
