--- a/src/Components/SmallComponents/IntroSpinner/IntroSpinner.css
+++ b/src/Components/SmallComponents/IntroSpinner/IntroSpinner.css
@@ -20,7 +20,7 @@
 
 @media only screen and (max-width: 1000px) {
     .intro-spinner-container {
-        font-size: 2.3rem;
+        font-size: clamp(1.5rem, 3vw, 2.3rem);
     }
 }
 
