--- a/src/Components/Testimonial/TestimonialSlide.css
+++ b/src/Components/Testimonial/TestimonialSlide.css
@@ -15,6 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 5rem
 }
 
 .slide-header .quote {
@@ -28,7 +29,7 @@
 }
 
 .slide-body {
-    font-size: clamp(0.75rem, 2vw, 1.1rem);
+    font-size: clamp(0.6rem, 1.4vw, 1.1rem);
     margin-bottom: auto;
     color: var(--color-lightn);
     /* overflow: auto; */
@@ -50,7 +51,7 @@
 }
 
 .company_image {
-    height: clamp(3rem, 5vw, 4.5rem);
+    height: clamp(3rem, 4vw, 4rem);
     object-position: center;
     object-fit: contain;
     /* background-color: red; */
@@ -81,4 +82,10 @@
 .slide-footer p {
     font-size: clamp(0.7rem, 2vw, 1rem);
     color: var(--color-body)
+}
+
+@media only screen and (max-width: 1000px) {
+    .slide-body {
+        font-size: clamp(0.8rem, 3vw, 1.3rem);
+    }
 }
