--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -17,5 +17,5 @@
 
 .ExperienceTitle span {
     color: var(--color-info-lighter);
-    font-size: 15px;
+    font-size: clamp(12px, 1.5vw, 15px);
 }
