--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 /* App.css */
 
+::-webkit-scrollbar {
+  display: none;
+  /* Hide ScrollBar Chrome Safari and Opera*/
+}
+
 .App {
   background-color: var(--background-color-2);
   color: white;
   display: flex;
   height: 100vh;
   padding: 0 2vw;
+  -ms-overflow-style: none;
+  /* Hide ScrollBar IE and Edge */
+  scrollbar-width: none;
+  /* Hide ScrollBar Firefox */
 }
 
 .leftContainer {
