--- a/src/Components/Modals/InitialModal.css
+++ b/src/Components/Modals/InitialModal.css
@@ -9,10 +9,11 @@
     position: fixed;
     inset: 0;
     z-index: 50;
+    max-width: 100%;
     /* High Z-Index to sit above all page content */
     display: grid;
     place-items: center;
-    overflow-y: scroll;
+    overflow-y: hidden;
     cursor: pointer;
 }
 
