--- a/src/Components/SmallComponents/HomeButton/HomeButton.css
+++ b/src/Components/SmallComponents/HomeButton/HomeButton.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 20px;
     left: 20px;
-    background-color: #20a7d8;
+    background-color: var(--color-primary);
     /* blue color */
     color: white;
     padding: 12px;
@@ -15,8 +15,8 @@
 }
 
 .home-button:hover {
-    transform: scale(1.2);
-    background-color: #0594c9;
+    transform: scale(1.1);
+    background-color: var(--color-primary-dark);
     /* Darker blue */
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
 }
