--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
 
 :root {
   --color-primary: #0184ff;
+  --color-primary-dark: rgb(3, 103, 235);
+  --color-primary-light: #10a6fd;
   --color-secondary: #f4f5f6;
   --color-tertiary: #0d1013;
   --color-gray: #f6f6f6;
@@ -24,6 +26,8 @@ body {
   --shadow-2: inset 21px 21px 19px #181a1d, inset -21px -21px 19px #202225;
   --shadow-soft: 10px 10px 10px #1e2024,
     -4px -5px 17px #2c3236;
+  --shadow-blue: 2px 2px 10px rgba(0, 153, 255, 0.384),
+    -6px -5px 15px rgba(3, 104, 235, 0.11);
   --shadow-black: 10px 10px 10px #1e2024,
     -4px -5px 17px #1e2024;
   --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
